# python_v2ray

./: .gitignore  README.md  RELEASE_TAG.txt  config.json  main.go  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh
.github/workflows/: go.yml
core_engine/: go.mod  main.go  sys_other.go  sys_windows.go
examples/: 01_simple_start_stop.py  02_config_builder.py  03_stats_viewer.py  04_connection_tester.py  05_hysteria_test.py  05_speed_tester.py  06_upload_tester.py  07_warp_tester.py  08_subscription_tester.py  09_deduplicate_configs.py
python_v2ray/: config_parser.py  core.py  downloader.py  hysteria_manager.py  models.py  process_manager.py  tester.py
python_v2ray.egg-info/: PKG-INFO  SOURCES.txt
python_v2ray/app/stats/command/: command_pb2_grpc.py
