[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_v2ray"
version = "0.1.0"
authors = [
  { name="arshiacomplus", email="arshiacomplus@gmail.com" },
]
description = "A powerful, high-level Python wrapper for managing and testing V2Ray/Xray-core and Hysteria clients."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["v2ray", "xray", "hysteria", "proxy", "tester", "api", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3",
    # We still need a classifier for PyPI to categorize the license
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
]

dependencies = [
    "requests",
    "grpcio",
    "protobuf",
]

[project.urls]
"Homepage" = "https://github.com/arshiacomplus/python_v2ray"
"Bug Tracker" = "https://github.com/arshiacomplus/python_v2ray/issues"

[tool.setuptools]
packages = ["python_v2ray", "python_v2ray.protos.app.stats.command"]

license-files = ["LICENSE"]

[tool.setuptools.package-data]
python_v2ray = [
    "vendor/*",
    "core_engine/*",
]