[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_v2ray"
version = "0.1.0"
authors = [
  { name="arshiacomplus", email="arshiacomplus@gmail.com" },
]
description = "A powerful, high-level Python wrapper for managing and testing V2Ray/Xray-core and Hysteria clients."
readme = "README.md"
license = "GPL-3.0-only" # The modern, correct SPDX identifier
requires-python = ">=3.8"
keywords = ["v2ray", "xray", "hysteria", "proxy", "tester", "api", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
]

dependencies = [
    "requests",
    "grpcio",
    "protobuf",
]

[project.urls]
"Homepage" = "https://github.com/arshiacomplus/python_v2ray"
"Bug Tracker" = "https://github.com/arshiacomplus/python_v2ray/issues"

[tool.hatch.build.targets.wheel]
packages = ["python_v2ray"]
include = [
    "/python_v2ray/vendor",
    "/python_v2ray/core_engine"
]

[tool.hatch.build.targets.sdist]
include = [
    "/python_v2ray",
    "/LICENSE",
    "/README.md",
]